--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,18 @@ img{
     margin-top: 15px;
     display: inline-block;
 }
+#about_us_area {
+    border: 2px solid black;
+}  
+.about_me_img img {
+    margin-left: 50px;
+}
+.about_me_content {
+    width: 40%;
+    margin: auto;
+}
+.recipes_content {
+    width: 70%;
+    margin: auto;
+    text-align: center;
+}
