--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,16 @@ img{
     margin: auto;
     text-align: center;
 }
+.my_recipes_wrapper {
+    display: flex;
+}
+.recipes_box {
+    width: 30%;
+    margin: 2% 3%;
+    box-shadow: 10px 10px 40px gray;
+    padding: 15px;
+    border-radius: 10px;
+}
+.recipes_box img {
+    border-radius: 10px;
+}
