--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,30 @@ img{
 .recipes_box p {
     color: #7f8c8d;
 }
+#social_media {
+    margin: 80px 0px;
+}
+.social_wrapper {
+    width: 70%;
+    margin: auto;
+    display: flex;
+    box-shadow: 10px 10px 50px gray;
+    border-radius: 10px;
+    padding: 70px 50px;
+}
+.social_box {
+    margin-right: 250px;
+}
+.social_box:last-child{
+    margin-right: 0;
+}
+.social_box h3 {
+    font-size: 2em;
+    text-align: center;
+}
+.social_box small {
+    font-size: 18px;
+    text-align: center;
+    color: #7f8c8d;
+    font-weight: 700;
+}
