--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,20 @@ img{
 .single_customer img {
     border-radius: 10px;
 }
+#footer_area {
+    margin-top: 100px;
+}
+#footer_area {
+    text-align: center;
+    background: black;
+    padding: 80px 0px;
+}
+#footer_area h1 {
+    color: #bdc3c7;
+    text-transform: uppercase;
+}
+#footer_area p {
+    color: #bdc3c7;
+    text-align: center;
+    text-transform: capitalize;
+}
