anout us background img

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,10 @@ img{
     display: inline-block;
 }
 #about_us_area {
-    border: 2px solid black;
+    background-image: url('../images/shapes/Frame\ 59.jpg');
+   position: center;
+   background-repeat: no-repeat;
+   margin: 100px 0px;
 }  
 .about_me_img img {
     margin-left: 50px;
